Dash: fix carousel on mobile

--- a/app/assets/stylesheets/dashboard.sass
+++ b/app/assets/stylesheets/dashboard.sass
@@ -1,5 +1,5 @@
 #carousel
-  height: 75vh
+  //height: 75vh
   overflow-y: hidden
 
   .carousel-inner
